--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <table>
                 <tr>
                     <td style="text-align: right;">Word:</td>
-                    <td><span class="word" id="word">__Something__</span></td>
+                    <td><span class="word" id="word"></span></td>
                 </tr>
                 <tr>
                     <td style="vertical-align: top;">Meaning:</td>
-                    <td><span class="meaning" ID="meaning">__Something__</span></td>
+                    <td><span class="meaning" ID="meaning"></span></td>
                 </tr>
             </table>
             <audio src="" controls class="audio" id="audio"></audio>
